--- a/src/main/java/com/notiflyapp/ui/GUI/fxml/thread_cell.fxml
+++ b/src/main/java/com/notiflyapp/ui/GUI/fxml/thread_cell.fxml
@@ -8,9 +8,9 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="200.0" prefHeight="40.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <HBox alignment="CENTER_LEFT" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0">
+      <HBox alignment="CENTER_LEFT" maxHeight="-Infinity" minHeight="-Infinity" minWidth="200.0" prefHeight="40.0">
          <children>
             <ImageView id="image_icon" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -22,9 +22,9 @@
                   <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
                </HBox.margin>
             </ImageView>
-            <VBox prefHeight="40.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
+            <VBox prefHeight="40.0" HBox.hgrow="ALWAYS">
                <children>
-                  <Label id="name_label" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="155.0" text="First Last Name">
+                  <Label id="name_label" prefHeight="30.0" text="First Last Name">
                      <padding>
                         <Insets left="10.0" right="10.0" />
                      </padding>
