--- a/src/main/java/com/notiflyapp/ui/GUI/fxml/home_screen.fxml
+++ b/src/main/java/com/notiflyapp/ui/GUI/fxml/home_screen.fxml
@@ -40,6 +40,13 @@
                </children>
             </VBox>
          </center>
+         <bottom>
+            <Label id="copyright_message" text="Copyright (c) 2016 Brennan Douglas" BorderPane.alignment="CENTER">
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+            </Label>
+         </bottom>
       </BorderPane>
    </children>
 </AnchorPane>
